continued working on and simplifying validators for html2pdfOptions

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
                 <h3>General</h3>
                 <label for='margin'>
                   Margin:
-                  <input class='text-black' id='margin' type='number' min='0' step='0.01' value='1'></input>
+                  <input class='text-black' id='margin' type='number' min='0' max='99' step='0.01' value='1'></input>
                 </label>
                 
                 <h3>Image</h3>
@@ -87,7 +87,7 @@
                 <h3>Canvas</h3>
                 <label for='scale'>
                   Scale:
-                  <input class='text-black' id='scale' type='number' min='1' value='4'></input>
+                  <input class='text-black' id='scale' type='number' min='1' max='16' value='4'></input>
                 </label>
                 <h3>PDF</h3>
                 <label for='orientation'>Orientation
@@ -121,7 +121,7 @@
                   <a href='https://rawgit.com/MrRio/jsPDF/master/docs/jsPDF.html'>HERE</a>
                 </h3>
 
-                <div id='validationErrors'></div>
+                <div class='text-red-500' id='validationErrors'></div>
 
                 <button class='p-2 mt-2 bg-gray-700' id='html2pdfSettings'>Change Settings</button>
               </form>
