validator works and appends proper error messages, still working on restoring default options

--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
 
                 <div class='text-red-500' id='validationErrors'></div>
 
-                <button class='p-2 mt-2 bg-gray-700' id='html2pdfSettings'>Change Settings</button>
+                <button class='p-2 mt-2 bg-gray-700' id='html2pdfSettings'>Reset to Default</button>
               </form>
             </div>
           </div>
