moved all js files back into one file, and attempted to create a bundled version (backups of each can be found in notes)

--- a/src/index.html
+++ b/src/index.html
@@ -25,19 +25,19 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/keymap/vim.min.js" integrity="sha512-CRScbOTlIJVds3U03uRuDwsYvvq3qFtW5rR7bdlWMzyaKASpibWkS4qhUwE0mfNIpwRurtR3V7bKMLPTtjXusw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/theme/ayu-dark.min.css" integrity="sha512-mV3RUXi1gt22jDb4UyRBFhZVFgAIiOfRE6ul+2l1Hcj6glyg6x4xlnjPH+neGm/t6XrFmsMRu4++McQu0asjqg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src='./setupEditor.js' defer></script>
+    <!-- <script src='./setupEditor.js' defer></script> -->
 
     <!-- {/*
     <script src='https://raw.githack.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js'></script>
     */} -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.js'></script>
-    <script src='./createPdf.js' defer></script>
+    <!-- <script src='./createPdf.js' defer></script> -->
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/0db2e99dd7.js" crossorigin="anonymous"></script>
 
-    <script src='./setupDropDowns.js' defer></script>
-    <script src='./setupDownloads.js' defer></script>
+    <!-- <script src='./setupDropDowns.js' defer></script> -->
+    <!-- <script src='./setupDownloads.js' defer></script> -->
     <script src='./index.js' defer></script>
 	</head>
   <body class='h-full w-full flex flex-col lg:flex-row'>
