--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,11 @@
 <html lang='en' class='h-full w-full'>
 	<head>
 		<meta charset='utf-8' />
-    <!-- <link rel='icon' type='image/svg+xml' href='/favicon.svg' /> -->
 		<meta name='viewport' content='width=device-width' />
 		<meta name='generator' content={Astro.generator} />
 		<title>Live HTML to PDF</title>
+    <link rel='icon' type='image/x-icon' href='favicon.ico' />
 
-    <!-- {/*
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/hint/html-hint.min.js' integrity='sha512-oxBKDzXElkyh3mQC/bKA/se1Stg1Q6fm7jz7PPY2kL01jRHQ64IwjpZVsuZojcaj5g8eKSMY9UJamtB1QR7Dmw==' crossorigin='anonymous' referrerpolicy='no-referrer'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/htmlembedded/htmlembedded.min.js' integrity='sha512-nZlYJlXg6ZqhEdMELUCY9QpeUZHLZh9JUUe2wnHmEvFSWer2gxmDO4xeQ4QlRM1zMzeZsTdm5oFw2IGhsmmLlA==' crossorigin='anonymous' referrerpolicy='no-referrer'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/htmlmixed/htmlmixed.min.js' integrity='sha512-HN6cn6mIWeFJFwRN9yetDAMSh+AK9myHF1X9GlSlKmThaat65342Yw8wL7ITuaJnPioG0SYG09gy0qd5+s777w==' crossorigin='anonymous' referrerpolicy='no-referrer'></script>
-
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/hint/anyword-hint.min.js' integrity='sha512-wdYOcbX/zcS4tP3HEDTkdOI5UybyuRxJMQzDQIRcafRLY/oTDWyXO+P8SzuajQipcJXkb2vHcd1QetccSFAaVw==' crossorigin='anonymous' referrerpolicy='no-referrer'></script>
-    */} -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js' integrity='sha512-8RnEqURPUc5aqFEN04aQEiPlSAdE0jlFS/9iGgUyNtwFnSKCXhmB6ZTNl7LnDtDWKabJIASzXrzD0K+LYexU9g==' crossorigin='anonymous' referrerpolicy='no-referrer'></script>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css' integrity='sha512-uf06llspW44/LZpHzHT6qBOIVODjWtv4MxCricRxkzvopAlSWnTf6hpZTFxuuZcuNE9CBQhqE0Seu1CoRk84nQ==' crossorigin='anonymous' referrerpolicy='no-referrer' />
     <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/xml/xml.min.js' integrity='sha512-LarNmzVokUmcA7aUDtqZ6oTS+YXmUKzpGdm8DxC46A6AHu+PQiYCUlwEGWidjVYMo/QXZMFMIadZtrkfApYp/g==' crossorigin='anonymous' referrerpolicy='no-referrer'></script>
@@ -25,19 +18,12 @@
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/keymap/vim.min.js' integrity='sha512-CRScbOTlIJVds3U03uRuDwsYvvq3qFtW5rR7bdlWMzyaKASpibWkS4qhUwE0mfNIpwRurtR3V7bKMLPTtjXusw==' crossorigin='anonymous' referrerpolicy='no-referrer'></script>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/theme/ayu-dark.min.css' integrity='sha512-mV3RUXi1gt22jDb4UyRBFhZVFgAIiOfRE6ul+2l1Hcj6glyg6x4xlnjPH+neGm/t6XrFmsMRu4++McQu0asjqg==' crossorigin='anonymous' referrerpolicy='no-referrer' />
-    <!-- <script src='./setupEditor.js' defer></script> -->
 
-    <!-- {/*
-    <script src='https://raw.githack.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js'></script>
-    */} -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.js'></script>
-    <!-- <script src='./createPdf.js' defer></script> -->
 
     <script src='https://cdn.tailwindcss.com'></script>
     <script src='https://kit.fontawesome.com/0db2e99dd7.js' crossorigin='anonymous'></script>
 
-    <!-- <script src='./setupDropDowns.js' defer></script> -->
-    <!-- <script src='./setupDownloads.js' defer></script> -->
     <script src='./index.js' defer></script>
 	</head>
   <body class='h-full w-full flex flex-col lg:flex-row'>
@@ -71,42 +57,22 @@
                 <label for='vimMode'>Enable Vim Mode</label>
               </div>
 
-              <!--
-              <div>
-              <div class='w-full text-center py-2'>
-              <input class='accent-gray-700' id='autoRefresh' type='checkbox'></input>
-              <label for='autoRefresh'>Enable Auto-Refresh</label>
-              </div>
-
-              <label class='flex justify-between my-2' for='refreshDelay'>
-              <div class='my-auto flex-1'>Refresh Delay</div>
-              <input class='text-black p-0.5 text-center w-1/2' type='number' step='0.001' value='1'></input>
-              </label>
-              </div>
-              <div>To disable auto-refresh, input a negative number, or use a checkbox, if checked, use input number as delay, if unchecked, disable auto-refresh</div>
-              -->
-
               <form class='flex flex-col' id='html2pdfOptions'>
                 <h3>General</h3>
                 <label class='flex justify-between my-2' for='margin'>
                   <div class='my-auto flex-1'>Margin:</div>
                   <input class='text-black p-0.5 text-center flex-1' id='margin' type='number' min='0' max='99' step='0.01' value='1'></input>
                 </label>
-                <!-- <label id='marginLabel'></label> -->
                  
-                <!-- <h3>Image</h3> -->
                 <label class='flex justify-between my-2' for='quality'>
                   <div class='my-auto flex-1'>Quality:</div>
                   <input class='text-black p-0.5 text-center flex-1' id='quality' type='number' min='0' max='1' step='0.01' value='1'></input>
                 </label>
-                <!-- <label id='qualityLabel'></label> -->
  
-                <!-- <h3>Canvas</h3> -->
                 <label class='flex justify-between my-2' for='scale'>
                   <div class='my-auto flex-1'>Scale:</div>
                   <input class='text-black p-0.5 text-center flex-1'  class='flex justify-between my-2'id='scale' type='number' min='1' max='16' value='4'></input>
                 </label>
-                <!-- <label id='scaleLabel'></label> -->
                  <h3>PDF</h3>
                 <label class='flex justify-between my-2' for='orientation'>
                   <div class='flex-1'>Orientation:</div>
@@ -115,7 +81,6 @@
                     <option value='landscape'>Landscape</option>
                   </select>
                 </label>
-                <!-- <label id='orientationLabel'></label> -->
  
                 <label class='flex justify-between my-2' for='units'>
                   <div class='flex-1'>Units:</div>
@@ -126,7 +91,6 @@
                     <option value='in'>Inches</option>
                   </select>
                 </label>
-                <!-- <label id='unitsLabel'></label> -->
  
                 <label class='flex justify-between my-2' for='format'>
                   <div class='flex-1'>Format:</div>
@@ -140,14 +104,7 @@
                     <option value='credit-card'>Credit-Card</option>
                   </select>
                 </label>
-                <!-- <label id='formatLabel'></label> -->
-                 <h3>Selectors go here, check
-                  <a href='https://rawgit.com/MrRio/jsPDF/master/docs/jsPDF.html'>HERE</a>
-                </h3>
 
-                <div class='text-red-500' id='validationErrors'></div>
-
-                <!-- <button class='p-2 mt-2 bg-gray-700' id='html2pdfSettings'>Reset to Default</button> -->
                 <button class='p-2 mt-2 bg-gray-700' id='resetHtml2pdfOptions'>Reset Options</button>
               </form>
             </div>
